Father i also fixed the problem that u said with the gender overlapping check it out.

--- a/payment.css
+++ b/payment.css
@@ -30,7 +30,7 @@ textarea{
 }
 fieldset{
     background-color: whitesmoke;
-    border: 2px solid lightgray;
+    border: 1px solid black;
 }
 .Main-Heading{
     text-align: center;
@@ -45,5 +45,5 @@ input[type="submit"] {
     width: 100%;
 }
 input[type="submit"]:hover {
-    background-color:  royalblue;
+    background-color:  royalblue; 
 }
